--- a/ml-apps.ipynb
+++ b/ml-apps.ipynb
@@ -56,7 +56,7 @@
         "colab_type": "code",
         "id": "BtVLlfXGGYgt",
         "cellView": "form",
-        "outputId": "75115935-a77e-481b-d842-9c71618e96fa",
+        "outputId": "7f07cc6d-e056-46e2-ae36-15e500d4ca0a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -213,6 +213,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "YXoT8GaTg4fL",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Part I: Supervised Learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "DG93276ziW8H",
         "colab_type": "text"
       },
@@ -233,7 +243,7 @@
         "id": "xsEtwmvhBZqN"
       },
       "source": [
-        "# Loading and exploring our data set\n",
+        "## Loading and exploring our data set\n",
         "\n",
         "This is a database of customers of an insurance company. Each data point is one customer. The group represents the number of accidents the customer has been involved with in the past\n",
         "\n",
@@ -247,7 +257,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "3vRMCp_4CODu",
-        "outputId": "813833e7-a46f-4020-a9a0-163c216fde62",
+        "outputId": "32bf25e9-ee7c-4fc2-fff0-e701d4805b35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -263,7 +273,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 26783  100 26783    0     0   256k      0 --:--:-- --:--:-- --:--:--  258k\n"
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 26783  100 26783    0     0   102k      0 --:--:-- --:--:-- --:--:--  102k\n"
           ],
           "name": "stdout"
         }
@@ -274,7 +284,7 @@
       "metadata": {
         "id": "-4btz7dmQz2l",
         "colab_type": "code",
-        "outputId": "257a5721-f3d4-40f3-902a-f3ab08d6f0d6",
+        "outputId": "27d4c0a1-9c6e-4cdd-a02d-cd17462fbe0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -322,7 +332,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "kzr738RwNKQ9",
-        "outputId": "1f04962b-1a9b-43cb-9814-1a6d0b990ae6",
+        "outputId": "f094f400-0328-4c06-f825-7fee23db865b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -422,7 +432,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "lCCADc-ZHB1_",
-        "outputId": "23566eca-4ea5-4f6e-d17f-507ea0ba0585",
+        "outputId": "1aab369b-7258-413b-e366-841f7c940efb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
@@ -559,7 +569,7 @@
       "metadata": {
         "id": "JdA7RYNzlcPj",
         "colab_type": "code",
-        "outputId": "d6e18eb9-934d-4203-bc45-d6b7ab75b834",
+        "outputId": "dec5c1d0-2779-4cdf-9361-1d73ce74930c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 565
@@ -592,7 +602,7 @@
       "metadata": {
         "id": "l200FVZOmnVT",
         "colab_type": "code",
-        "outputId": "c0234dc4-5530-411a-d92c-96eca115c379",
+        "outputId": "31d241b3-f9da-42f9-b96b-de21d1a5be5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -623,7 +633,7 @@
       "metadata": {
         "id": "l4h1irivqfpZ",
         "colab_type": "code",
-        "outputId": "c6a2a56e-a6f2-4fc5-d01a-6a20d0a0e012",
+        "outputId": "df0f7666-ee37-41b3-d776-195786117da3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -654,7 +664,7 @@
       "metadata": {
         "id": "XkJ-7mfzmve2",
         "colab_type": "code",
-        "outputId": "f8407e70-3f83-4c3a-85c4-75ddf6444a2b",
+        "outputId": "4c8ad222-e125-4071-b2ab-08643aff4efe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 580
@@ -694,7 +704,7 @@
         "id": "zR_Lz5vQ5m2H"
       },
       "source": [
-        "## First important concept: You train a machine with your data to make it learn the relationship between some input data and a certain label - this is called supervised learning"
+        "### First important concept: You train a machine with your data to make it learn the relationship between some input data and a certain label - this is called supervised learning"
       ]
     },
     {
@@ -716,7 +726,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "fHpidGkC4QJN",
-        "outputId": "64865be5-3ab5-412d-91b3-14bd22a13d2e",
+        "outputId": "ae916a0e-332f-424c-9303-df9b02156d58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -765,7 +775,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "V0em7WyS4cph",
-        "outputId": "2af6fc32-05e0-452d-f115-f7d29f3cd7b9",
+        "outputId": "ad94000a-ea82-411f-ead3-8c199ad0ccdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -875,7 +885,7 @@
         "id": "qsRqVhtDBZq6"
       },
       "source": [
-        "### We restrict ourselves to two dimensions\n",
+        "#### We restrict ourselves to two dimensions\n",
         "\n",
         "Miles is pretty much dependent on speed"
       ]
@@ -991,10 +1001,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "33Dh_Q35RqR_",
-        "outputId": "3e84f799-db6c-4142-900d-ce60b387d38d",
+        "outputId": "78f91a63-1e4a-4226-8071-d119362c2bf1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 532
         }
       },
       "source": [
@@ -1023,10 +1033,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "k1O_vyvY45wW",
-        "outputId": "7fa577b8-53ae-49b3-f414-5f4cc6cb6d45",
+        "outputId": "a0e6473d-0bc3-45fe-ca7e-1b92b11e7c05",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 136
         }
       },
       "source": [
@@ -1060,10 +1070,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "umydOZWYBZsz",
-        "outputId": "e9ec5d14-3320-49d9-cf70-4d1d3d68a150",
+        "outputId": "7603b112-76e1-4592-beff-8b8028551973",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 51
         }
       },
       "source": [
@@ -1078,8 +1088,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 163 ms, sys: 14 ms, total: 177 ms\n",
-            "Wall time: 443 ms\n"
+            "CPU times: user 186 ms, sys: 17.5 ms, total: 203 ms\n",
+            "Wall time: 207 ms\n"
           ],
           "name": "stdout"
         }
@@ -1090,10 +1100,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "_bZmJk7r5tPL",
-        "outputId": "074cc224-6b2c-47d9-aa0e-fa86c4b7c1b0",
+        "outputId": "f63b1bfd-3d60-4e81-86eb-0a66c24fb5a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 34
         }
       },
       "source": [
@@ -1121,10 +1131,10 @@
       "metadata": {
         "id": "AXaS9yD38BOm",
         "colab_type": "code",
-        "outputId": "2e32d227-0ec4-4349-b8ed-a7c6289493fe",
+        "outputId": "3ef85ff5-090c-4f2f-9c63-516bf200e64e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 34
         }
       },
       "source": [
@@ -1153,7 +1163,7 @@
         "id": "XeAYKyNr4SA3"
       },
       "source": [
-        "# Stop here"
+        "## Stop here"
       ]
     },
     {
@@ -1163,7 +1173,7 @@
         "id": "n9qBc7l77kGs"
       },
       "source": [
-        "## Second important concept: To have an idea how well the training worked, we save some data to test our model on previously unseen data. \n",
+        "### Second important concept: To have an idea how well the training worked, we save some data to test our model on previously unseen data. \n",
         "\n",
         "* The real objective is to have a generalized model that works well on the test data.\n",
         "* How well it performs on this test data as opposed to the training data tells us quite a bit as well.\n",
@@ -1179,7 +1189,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "A7CUrbew7p4l",
-        "outputId": "e6187ad7-3971-4382-d219-b1e603dec337",
+        "outputId": "68bc6f98-d6ee-4df0-baa6-b88d959d8223",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1242,7 +1252,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "AyBWaCai75Zy",
-        "outputId": "e3e48911-d64a-4578-b8dc-4062f99cafa7",
+        "outputId": "d0d8abd7-16a9-4cc5-9617-ee974df6edeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1273,7 +1283,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "IqUX415c79dT",
-        "outputId": "943dff30-5215-4113-b612-579cf1d2017b",
+        "outputId": "d152fe92-2ce0-4888-9f7b-6f04b2d50406",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1321,10 +1331,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "Nv6FueUFAbz0",
-        "outputId": "e5f88104-29d6-445a-fc91-98050d0809e4",
+        "outputId": "984d287a-1e56-4bb7-f35d-547f256ceb9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 153
         }
       },
       "source": [
@@ -1336,8 +1346,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 3.28 ms, sys: 455 µs, total: 3.74 ms\n",
-            "Wall time: 9.04 ms\n"
+            "CPU times: user 3.75 ms, sys: 127 µs, total: 3.87 ms\n",
+            "Wall time: 4.5 ms\n"
           ],
           "name": "stdout"
         },
@@ -1365,10 +1375,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "-Gy8EW9RBZs7",
-        "outputId": "1fb695a4-e165-4346-cfcb-c2b49b91898b",
+        "outputId": "6ed0bb59-4a9e-40fe-f145-d2e7a0e36841",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 34
         }
       },
       "source": [
@@ -1397,10 +1407,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "ht_rWYIxBZs-",
-        "outputId": "212602ed-5e92-4155-9886-838f68f7fee0",
+        "outputId": "861c811f-9491-4396-b4e0-e639bd854f13",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 532
         }
       },
       "source": [
@@ -1429,10 +1439,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "c2Kcf4UHBZtA",
-        "outputId": "f031365f-be5a-4e3a-cedd-947eab1baf23",
+        "outputId": "2ccb70b4-6b37-4207-eecb-e380d2be95b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 34
         }
       },
       "source": [
@@ -1459,10 +1469,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "1_Ui6EvOBZtI",
-        "outputId": "34ca51bb-b6c5-4c3e-89b1-309d0c6173fd",
+        "outputId": "315905ce-785b-4e2c-bac6-063d79b4d812",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 532
         }
       },
       "source": [
@@ -1491,10 +1501,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "2gMNy0s_BZtK",
-        "outputId": "f7cb21a1-2288-4557-fbb1-29b52c443110",
+        "outputId": "3690dba0-a9db-401e-d12b-ee785bdb92d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 34
         }
       },
       "source": [
@@ -1537,7 +1547,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "2OEQ7gmQBZtR",
-        "outputId": "f07e710a-0e52-4ce9-c5a3-1c6ca93fb45a",
+        "outputId": "1131cf80-c479-461f-dfee-cb1e7185262d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -1556,8 +1566,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 2.16 ms, sys: 33 µs, total: 2.19 ms\n",
-            "Wall time: 2.22 ms\n"
+            "CPU times: user 3.11 ms, sys: 21 µs, total: 3.13 ms\n",
+            "Wall time: 10.1 ms\n"
           ],
           "name": "stdout"
         },
@@ -1585,7 +1595,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Q1kpHqFIBZtZ",
-        "outputId": "a0b59e19-db18-476d-8439-e34ddeb18247",
+        "outputId": "a204cf1a-bbdd-43c9-9667-d554e3d1dec9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1615,7 +1625,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "xv9zx4rVBZth",
-        "outputId": "18043b48-5a41-4899-e480-f90eee357791",
+        "outputId": "c81b1680-e6f3-43e8-add6-764fd56c1cba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1645,7 +1655,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "i2pYkd5mBZtT",
-        "outputId": "cd25d44e-261b-48b8-eaca-0a41ac4186b5",
+        "outputId": "66feb63d-a887-4ebb-fac1-39442c674198",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1675,7 +1685,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "TT1ka8ySBZtX",
-        "outputId": "2ca3ed23-ae8e-4d62-9993-cebcb50d4e0a",
+        "outputId": "4be0d1d1-f07b-4b61-b5e1-ac2da1f7d44d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1707,7 +1717,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nUO2_IxYBZte",
-        "outputId": "bba9e688-04a8-4b65-b30a-0e63134593c7",
+        "outputId": "f89823a0-f5f4-4aa3-cec3-90e241d47b06",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
@@ -1739,7 +1749,7 @@
       "metadata": {
         "id": "wMkgJBYPyTLr",
         "colab_type": "code",
-        "outputId": "8df1861e-9c2c-4682-d925-beb1e01241bc",
+        "outputId": "57ff668c-5146-4495-c00d-ffa560773eef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 595
@@ -1778,6 +1788,52 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mHrrPAM3h5Td",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Part II: Unsupervised Learning"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "un-QE-hQkYTT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9rPsK5DckZFB",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Part III: Reinforcement Learning"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nhPp9IFokbd7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
